# dataved

./: .gitignore  LICENSE  README.md  config.yaml  data_dashboard.py  data_utils.py  pyproject.toml  requirements.txt  test-results.xml  test_csv_function.py
.github/workflows/: tests.yml
.streamlit/: config.toml  secrets.toml
app/: __init__.py  state.py
app/pages/: __init__.py  anomaly.py  correlation.py  distribution.py  explore.py  raw_data.py  trend.py
app/ui/: __init__.py  dataset_selector.py  save_plot.py  sidebar.py
charts/: __init__.py  anomaly.py  correlation.py  distribution.py  trend.py
core/: __init__.py  anomaly_detection.py  rolling.py
services/: __init__.py  data_loader.py  data_utils.py
tests/: conftest.py  test_charts_correlation.py  test_charts_trend.py  test_core_anomaly_detection.py  test_core_rolling.py  test_data_dashboard.py  test_services_data_utils.py
