[project]
name = "data-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair==5.5.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "contourpy==1.3.1",
    "coverage==7.8.0",
    "cycler==0.12.1",
    "exceptiongroup==1.2.2",
    "fonttools==4.57.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kiwisolver==1.4.8",
    "loguru==0.7.3",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "narwhals==1.33.0",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "plotly==6.0.1",
    "pluggy==1.5.0",
    "protobuf==5.29.4",
    "pyarrow==19.0.1",
    "pydeck==0.9.1",
    "pyyaml==6.0.2",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "pytest-cov==6.1.0",
    "pytest-mock==3.14.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rpds-py==0.24.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit>=1.55.0",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tomli==2.2.1",
    "tornado==6.4.2",
    "typing-extensions==4.13.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "watchdog==6.0.0",
    "pygwalker>=0.3.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:traitlets",
    "ignore::DeprecationWarning:astor",
]
