[project]
name = "data-dashboard"
version = "0.2.0"
description = "First open-source beta of **Dataved**"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "plotly>=6.0",
    "pygwalker>=0.3.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:traitlets",
    "ignore::DeprecationWarning:astor",
]
